<resources>
    <string name="app_name">ColoCrypter</string>
    <string name="btnLogin">LOGIN</string>
    <string name="labLogin">Please provide your password to login</string>
    <string name="title_activity_list_view">Passwords</string>
    <string name="select_backup_or_new_title">No Password File</string>
    <string name="select_backup_or_new_body">Do you want to select an existing password (restore a backup) file or create a new one? If you select new you will need to select where you want the file to be stored</string>
    <string name="select_backup_or_new_choose_new"> New File </string>
    <string name="select_backup_or_new_choose_restore"> Restore Backup </string>
    <string name="settings">Settings</string>
    <string name="change_password">Login password</string>
    <string name="verify_password">Verify login password</string>
    <string name="welcome_message_title">Welcome to ColoCrypter!</string>
    <string name="welcome_message">No passwords have been found on file.\nTo continue, please provide your login password</string>
    <string name="btn_set_login_password">Set login password</string>
    <string name="status_read_not_granted">Read permission was not granted</string>
    <string name="status_write_not_granted">Write permission was not granted</string>
    <string name="status_rw_not_granted">Read/Write permissions were not granted.</string>
    <string name="status_permission_required">Read/Write permissions are required for ColoCrypter to work.\nTo enable them go to Settings -> General -> Apps -> ColoCrypter -> Permissions\nThen enable Storage</string>
    <string name="status_failed_creting_dir">Failed creating CCrypt Directory</string>
    <string name="all_access_permissions_required">All Access file permissions required so that writing in the Documents directory is enabled.</string>
    <string name="status_permission_dialog_title">Permissions are required</string>
    <string name="status_pass_not_match">Passwords do not match.</string>
    <string name="status_enc_error_title">Encryption error</string>
    <string name="status_enc_error_message">This problem should not have happened. Please restart the app .  If problem persists contact the application\'s developer and provide the error code.</string>
    <string name="status_pass_too_short">Minimum size for login password is: </string>
    <string name="status_file_corruped">The password file is corrupted</string>
    <string name="status_bad_password">Wrong password provided</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_change_password">Change login password</string>
    <string name="title_activity_edit_entry_view">Edit data</string>
    <string name="entry_name">Name</string>
    <string name="user_name">User identification</string>
    <string name="entry_description">Short description</string>
    <string name="pass_word">Password</string>
    <string name="use_uppercase_letters">Uppercase letters</string>
    <string name="use_lowercase_letters">Lowercase letters</string>
    <string name="use_numbers">Numbers</string>
    <string name="use_symbols">Symbols</string>
    <string name="pass_size">Size</string>
    <string name="entry_add">ADD</string>
    <string name="generate_password">GENERATE</string>
    <string name="conigure_password_generator">Configure Password Generator</string>
    <string name="delete_entry">Delete</string>
    <string name="modify_msg_pt1">Modifing entry:</string>
    <string name="overwrite_msg_pt1">You are about to overwrite</string>
    <string name="with"> with </string>
    <string name="mod_del_msg_pt2">Do you want to continue?</string>
    <string name="delete_msg_pt1">Delete entry:</string>
    <string name="copy_userid">User ID copied to clipboard</string>
    <string name="copy_password">Password copied to clipboard</string>
    <string name="gen_password_warning">Generated passwords have to have at least 4 characters</string>
    <string name="diag_yes">Yes</string>
    <string name="diag_no">No</string>
    <string name="can_not_overwrite_title">Existing name</string>
    <string name="can_not_overwrite">There already exists an entry with the name:</string>
    <string name="invalid_string">cannot contain &lt;&gt; or |</string>
    <string name="empty_entry_name">The entry input cannot be empty</string>
    <string name="entry_save">SAVE</string>
    <string name="import_data">Import from CSV</string>
    <string name="import_instructions">1) Use your favorite notepad app to generate you password file and save it as data.csv.\n\n2) Each line in the file in an entry in the app, so each line will have the following format Name,Username,Password,Notes. So here is an example: \n\n\t\tWork mail, john, 1234, My favourite password\n\t\tStreaming, johnnyboy, johnis12nofun!. \n\nNote that the fourth column is optional. If a row contains a field with reserved characters or if the name already exists, the row will be omitted\n\n3) The CSV file must be copied or downloaded to your device\n\n4) Click IMPORT, select where the file is located</string>
    <string name="import_data_btn">IMPORT</string>
    <string name="import_error_import_report_1">Imported entries: </string>
    <string name="import_error_import_report_2"> of </string>
    <string name="no_chars_for_pass_gen">At least one type of character must be used.</string>
    <string name="title_activity_import_view">Import instructions</string>
    <string name="import_error_format">Incorrect format for the data.csv file. Please check that it is a proper CSV.</string>
    <string name="import_error_file">The CSV file could not be imported. The error was:</string>
    <string name="search_title">Search</string>
    <string name="edit_data">Edit</string>
    <string name="menu_backup">Backup</string>
    <string name="title_activity_backup_instructions">Backup instructions</string>
    <string name="backup_instructions">It is highly recommended that you backup you password file, especially after changing or adding a critical password. Your file is encrypted.\n\nYour password file is located on:\n\n__LOCATION__\n\nTo backup your passwords simply copy your file to any other location. Cloud services are a very simple and effective option.\n\nIf you want to move your passwords between devices, follow these steps:\n\n1) Download or copy your latest backup in the new device. If desired you can safely change its location or its name\n\n2) Download the app in the new device\n\n3) Starting the app you will be prompted if you wan to create a new file or restore a backup.\nSelect the restore action and select the downloaded file. </string>
    <string name="notes_label">Notes</string>
    <string name="apply_changes">Apply</string>
    <string name="logout_time">Logout time</string>
    <string name="cancel_button">Cancel</string>
    <string name="random_gen_dialog_title">Random Password</string>
</resources>
