<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miLogout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/miChangePass"
        android:title="@string/menu_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/miSettings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/miImportData"
        android:title="@string/import_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/miBackup"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->

</menu>


    <!--colocrypter:showAsAction="collapseActionView|ifRoom"-->