<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSettingsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/primaryTextColor"
        android:padding="@dimen/fab_margin"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/primaryDarkColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLabelForLogoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:lineSpacingExtra="10sp"
        android:padding="8dp"
        android:text="@string/logout_time"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etLogoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/secondaryLightColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:lineSpacingExtra="10sp"
            android:padding="8dp"
            android:text="mins"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfigApply"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:hapticFeedbackEnabled="true"
            android:text="@string/apply_changes" />

        <Button
            android:id="@+id/btnConfigCancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:hapticFeedbackEnabled="true"
            android:text="@string/cancel_button" />
    </LinearLayout>
</android.widget.LinearLayout>
