<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.ariela.colocrypter.ImportView"
    tools:showIn="@layout/activity_import_view">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/advent_pro_semibold"
        android:inputType="none"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/primaryLightColor"
        android:text="@string/import_instructions"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/btnImport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <Button
        android:id="@+id/btnImport"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:hapticFeedbackEnabled="true"
        android:onClick="importCSV"
        android:text="@string/import_data_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>
