<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.ariela.colocrypter.EditEntryView"
    tools:showIn="@layout/activity_edit_entry_view">

    <TextView
        android:id="@+id/tvEntryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_edit_view"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/padding_edit_view"
        android:labelFor="@id/etEntryName"
        android:text="@string/entry_name"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEntryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_edit_view"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/padding_edit_view"
        android:labelFor="@id/etEntryUserID"
        android:text="@string/user_name"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEntryUserID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEntryName" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_edit_view"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/padding_edit_view"
        android:labelFor="@id/etEntryPassword"
        android:text="@string/pass_word"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEntryPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEntryUserID" />

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_edit_view"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/padding_edit_view"
        android:text="@string/notes_label"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEntryPassword" />

    <EditText
        android:id="@+id/etEntryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEntryName" />

    <EditText
        android:id="@+id/etEntryUserID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <EditText
        android:id="@+id/etEntryPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/tvNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/btnGeneratePass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotes" />

    <Button
        android:id="@+id/btnGeneratePass"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/padding_edit_view"
        android:background="@drawable/button_background"
        android:hapticFeedbackEnabled="true"
        android:onClick="generatePassword"
        android:text="@string/generate_password"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNotes" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padding_edit_view"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:hapticFeedbackEnabled="true"
        android:onClick="addEntry"
        android:text="@string/entry_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGeneratePass" />


</androidx.constraintlayout.widget.ConstraintLayout>
