<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.colocrypter.ChangePasswordView"
    tools:showIn="@layout/activity_change_password_view">

    <EditText
        android:id="@+id/etChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/tvVerifyPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <EditText
        android:id="@+id/etVerifyPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/btnSetLoginPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerifyPassword" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:labelFor="@id/etChangePassword"
        android:text="@string/change_password"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <TextView
        android:id="@+id/tvVerifyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:labelFor="@id/etVerifyPassword"
        android:text="@string/verify_password"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etVerifyPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChangePassword" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/advent_pro_semibold"
        android:inputType="none"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnSetLoginPass"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background"
        android:onClick="changePassword"
        android:text="@string/btn_set_login_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVerifyPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
